<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/discover_page" />
    <item
        android:id="@+id/navigation_queue"
        android:icon="@drawable/baseline_queue_24"
        android:title="@string/queue_page" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile_page" />
</menu>
