<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0191818"
    tools:context=".queue.Queue_home">

    <Button
        android:id="@+id/join_queue_btn"
        android:layout_width="102dp"
        android:layout_height="52dp"
        android:layout_marginBottom="103dp"
        android:background="@color/burnt"
        android:onClick="qr_scanner"
        android:text="@string/join_queue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_queue" />

    <TextView
        android:id="@+id/queue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/queue_title"
        android:textColor="@color/white"

        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/current_queue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/current_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_the_button_below_to_join_a_queue"
        android:textSize="20sp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/join_queue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queue_title" />

    <TextView
        android:id="@+id/wait_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait_est_str"
        android:textSize="20sp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/leave_queue_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_queue" />

    <Button
        android:id="@+id/leave_queue_btn"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_marginBottom="103dp"
        android:background="@color/burnt"
        android:onClick="leave_queue"
        android:text="@string/leave_queue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wait_est" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemBackground="@color/burnt"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/nav" />

</androidx.constraintlayout.widget.ConstraintLayout>