<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegister.Register">

    <EditText
        android:id="@+id/user_password_confirm"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_register"
        android:ems="10"
        android:hint="confirm password"
        android:inputType="textPersonName"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="324dp" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_register"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_register"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="231dp" />
        />
</androidx.constraintlayout.widget.ConstraintLayout>