<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/post_pic"
        app:layout_constraintEnd_toStartOf="@+id/username_main"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/username_main"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/username"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/post_pic"
        app:layout_constraintEnd_toStartOf="@+id/connect_btn"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/connect"
        app:layout_constraintBottom_toTopOf="@+id/post_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_main"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/post_pic"
        android:layout_width="365dp"
        android:layout_height="375dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/post_picture"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/bio_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bio"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/db"
        app:layout_constraintBottom_toTopOf="@+id/friends"
        app:layout_constraintEnd_toStartOf="@+id/bio_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_pic" />

    <TextView

        android:id="@+id/bio_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bio"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/workouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bio"
        app:layout_constraintTop_toBottomOf="@+id/post_pic" />


    <TextView
        android:id="@+id/friends"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/friends_discover"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bio"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/workouts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/workouts"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/friends"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/workouts"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/bio_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/friends"
        app:layout_constraintWidth_default="spread" />


</androidx.constraintlayout.widget.ConstraintLayout>